# paperless-annotations

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  docker-entrypoint.sh  note_annotation.template  package-lock.json  package.json  pyproject.toml
core/: asgi.py  settings.py  urls.py
plannotations/: admin.py  annostorage.py  annotations.py  api copy.py  api.py  apps.py  auto_linking.py  models.py  paperless_api.py  tasks.py  urls.py  views.py
plannotations/migrations/: 0001_initial.py
static/: annotator.js  api.js  icons.js
templates/: base.html  create_user.html  index.html  login.html  view.html
